<resources>

    <!-- View Names/Text-->
    <string name="app_name">MobileProject</string>
    <string name="rent_button">Rent This Car!</string>
    <string name="location_spinner_label">Location</string>
    <string name="price_range_label">Select a Price Range</string>
    <string name="price_sorting_label">Sort Price</string>
    <string name="price_asc_label">Ascending</string>
    <string name="price_dsc_label">Descending</string>
    <string name="apply_filter">Apply</string>
    <string name="clear_filter">Clear</string>
    <string name="pickNdrop">Pickup and Drop-off Location</string>
    <string name="startDate">From Date</string>
    <string name="endDate">To Date</string>
    <string name="calPrice">Price to Pay</string>
    <string name="request_rent">Place Rent Request</string>
    <string name="price_per_day">/ Per Day</string>
    <string name="Location">Location:</string>
    <string name="emptyDatesLabel">- - Empty - -</string>
    <string name="calculatedPrice">0.00</string>
    <string name="AlertOKButton">OK</string>
    <string name="AlertTitle">Notice</string>
    <string name="AlertText">Incorrect Date Selection</string>
    <string name="noResults">Woops!\n\n\nThere are no cars that match what you\'re looking for.\n\nPlease alter your search criteria.</string>


    <!-- USER KEY (gmail of user) obtained from login, propagated through app-->
    <string name="USER_KEY">whoAmI</string>

    <string name="MY_PREF_KEY">Preferences</string>



    <!-- Filter returns result to Browser Intent name-->
    <string name="FILTER_CONSTRUCTED_URL">filter_URL</string>


    <!-- Browser to Filter Bundle variables (to keep track of prev put filter) -->
    <string name="LOC">location</string>
    <string name="LOW">lower</string>
    <string name="HIGH">higher</string>
    <string name="ORD">order</string>

    <string name="FilterConstructedURL">filterParaURL</string>
    <string name ="PREF_FIRST_LAUNCH">firstLaunch"</string>


    <!--Browser to clicked a car to view info-->
    <string name="CAR_ID">car_id</string>
    <string name="CAR_PRICE">car_price</string>
    <string name="CAR_NAME">car_name</string>



    <!--used in the intent that opens the view car activity to know where it came from-->
    <string name="VIEW_CAR_SOURCE">vc_src</string>
    <string name="FROM_BROWSE">browse</string>
    <string name="FROM_RENT">rent</string>


    <!-- API URLs -->
    <string name="GET_DATA_URL">http://10.0.2.2/api/get_all_cars_h.php</string>
    <string name="GET_SEARCHED_URL">http://10.0.2.2/api/get_searched_car_h.php</string>
    <string name="GET_SPECIFIC_CAR_URL">http://10.0.2.2/api/get_specific_car_and_owner_h.php</string>
    <string name="INSERT_REQUEST_IF_VALID_URL">http://10.0.2.2/api/insert_rent_request_h.php</string>


    <string-array name="location_values">
        <item>Select</item>
        <item>Ramallah</item>
        <item>Nablus</item>
        <item>Jerusalem</item>
        <item>Hebron</item>
        <item>Jericho</item>
        <item>Jenin</item>
        <item>Tulkaram</item>
        <item>Qalqilya</item>
    </string-array>

    <string-array name="range_values">
        <item>0</item>
        <item>2000</item>
    </string-array>
</resources>