<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_car_xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue3"
    tools:context=".ViewCarActivity">

    <Button
        android:id="@+id/view_car_back"
        style="@style/BackButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:onClick="backToBrowse"
        />

    <TextView
        android:id="@+id/view_car_name"
        style="@style/HeadlineTextStyle"
        android:text="Car name here"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/view_car_back"
        />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/view_car_back"
    android:layout_alignParentLeft="true"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/view_car_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:src="@drawable/default_car"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />


            <TextView
                android:id="@+id/view_car_price"
                style="@style/BrowseTextStyle"
                android:text="700"
                android:layout_width="wrap_content"
                android:layout_below="@+id/view_car_image"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                />

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/shekel_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/big_sekel"
            android:layout_toRightOf="@id/view_car_price"
            android:layout_below="@+id/view_car_image"

            />

        <TextView
            style="@style/HeadlineTextStyle"
            android:text="@string/price_per_day"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="12dp"
            android:textSize="30dp"
            android:layout_below="@+id/view_car_image"
            android:layout_toRightOf="@id/shekel_pic"

            />

            <TextView
                android:id="@+id/view_car_info"
                style="@style/NormalTextStyle"
                android:text="Information is put right here. we can add lots of info about this car in this space. I hope this text won't apear, because if it does, that means the data from the database failed to be retreived. Anyways, you can go on and on with this text, it should describe more about the selected car above. Have a great day!"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_car_price"
                android:layout_margin="15dp"
                android:layout_alignParentStart="true"

                />

        <TextView
            android:id="@+id/location_label"
            style="@style/HeadlineTextStyle"
            android:text="@string/Location"
            android:layout_width="wrap_content"
            android:layout_below="@+id/view_car_info"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="12dp"
            />

        <TextView
            android:id="@+id/view_car_location"
            style="@style/HeadlineTextStyle"
            android:text="Ramallah"
            android:layout_width="wrap_content"
            android:layout_below="@+id/view_car_info"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/location_label"
            />

            <RelativeLayout
                android:id="@+id/owner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/border"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_below="@+id/location_label"

                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="20dp"

                    >

                    <ImageView
                        android:id="@+id/view_car_owner_pic"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/profile"
                        android:scaleType="centerCrop"
                        />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/view_car_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/card"
                    android:layout_marginTop="10dp"
                    android:text="Robert Johanson"
                    style="@style/NormalTextStyle"
                    />
                <TextView
                    android:id="@+id/view_car_owner_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_car_owner_name"
                    android:layout_toRightOf="@+id/card"
                    android:text="+970 595876954"
                    android:layout_marginTop="10dp"
                    style="@style/NormalTextStyle"
                    />



            </RelativeLayout>

        <Button
            android:id="@+id/view_car_rent_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/AppButtonStyle"
            app:backgroundTint="@null"
            android:text="@string/rent_button"
            android:layout_gravity="center"
            android:onClick="setDetailsToRentCar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/owner_layout"
            />


    </RelativeLayout>

</ScrollView>


</RelativeLayout>